--- a/NotifyMe.API/Views/Notifications/Index.cshtml
+++ b/NotifyMe.API/Views/Notifications/Index.cshtml
@@ -36,7 +36,7 @@
                     <tr data-row=">@item.Id">
                         <th scope="row">@count</th>
                         <td>
-                            <a class="btn link-primary" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Message</a>
+                            <a class="btn link-primary p-0" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Message</a>
                         </td>
                         <td>@item?.EventId</td>
                         <td>
