Refactored the code. Added 2 guidlines

--- a/NotifyMe.API/Views/Changes/Index.cshtml
+++ b/NotifyMe.API/Views/Changes/Index.cshtml
@@ -4,8 +4,7 @@
 
 @inject IMapper Mapper;
 @inject IGroupService GroupService;
-@* @model ICollection<Change> *@
-@model IIncludableQueryable<Change, Event>
+@model ICollection<Change>
 
 @{
     Layout = "_Layout";
