--- a/NotifyMe.API/Views/Events/Index.cshtml
+++ b/NotifyMe.API/Views/Events/Index.cshtml
@@ -3,9 +3,7 @@
 @using Microsoft.EntityFrameworkCore.Query
 @inject IMapper Mapper;
 @inject IGroupService GroupService;
-
-@model IIncludableQueryable<Event, Configuration>
-
+@model ICollection<Event>
 @{
     Layout = "_Layout";
     int count = 1;
